meal recommendation api for offline and online mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=meal-recommend-service
+server.port=9012
+server.servlet.context-path=/meal-recommend
+
+# External API URLs
+documenu.api.url=https://api.documenu.com/v2/restaurants
+documenu.api.key=f1901415a6msh25aa4a1aad4f049p1ba25bjsnec541c9037f2
+
+
+edamam.api.url=https://api.edamam.com/api/recipes/v2
+edamam.api.key=
+
+offline.fallback.file=classpath:offline_data.json
