--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     <name>meal-recommend-service</name>
     <description>meal-recommend-service</description>
     <url/>
-
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -29,8 +28,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -38,6 +43,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>meal-recommendation-service</finalName>
     </build>
-
 </project>
